# DRE

./: .gitignore  .gitmodules  CMakeDREHelpers.txt  CMakeLists.txt  NatvisFile.natvis
apps/DemoApp/: Application.hpp  CMakeLists.txt  ImGuiHelper.cpp  ImGuiHelper.hpp  VulkanApplicationDelegate.cpp  VulkanApplicationDelegate.hpp  main.cpp
apps/demo_app/: AppUtils.cpp  AppUtils.hpp  CMakeLists.txt  DREApplicationDelegate.cpp  DREApplicationDelegate.hpp  ImGuiHelper.cpp  ImGuiHelper.hpp  VulkanApplicationDelegate.cpp  VulkanApplicationDelegate.hpp  main.cpp
include/editor/: BaseEditor.hpp  CameraEditor.hpp  EngineInputManager.hpp  LightPropertiesEditor.hpp  RootEditor.hpp  SceneGraphEditor.hpp  StatsEditor.hpp  TextureInspector.hpp  TransformEditor.hpp  ViewportInputManager.hpp
include/engine/: ApplicationContext.hpp
include/engine/data/: Geometry.hpp  GeometryLibrary.hpp  Material.hpp  MaterialLibrary.hpp  Model.hpp  Texture2D.hpp
include/engine/io/: DRFX.hpp  IOManager.hpp
include/engine/scene/: Camera.hpp  Entity.hpp  ISceneNodeUser.hpp  Light.hpp  Positional.hpp  Scene.hpp  SceneNode.hpp  SceneNodeManipulator.hpp
include/engine/transform/: TransformationSystem.hpp
include/foundation/: Common.hpp
include/foundation/container/: HashTable.hpp  HashTableBase.hpp  InplaceBitfield.hpp  InplaceHashTable.hpp  InplaceVector.hpp  ObjectPool.hpp  ObjectPoolQueue.hpp  Vector.hpp
include/foundation/input/: InputSystem.hpp
include/foundation/math/: Geometry.hpp  SimpleMath.hpp
include/foundation/memory/: AllocatorBuddy.hpp  AllocatorLinear.hpp  AllocatorPool.hpp  AllocatorScopeStack.hpp  AllocatorSystem.hpp  ByteBuffer.hpp  ElementAllocator.hpp  InplaceObjectAllocator.hpp  Memory.hpp  MemoryOps.hpp  Pointer.hpp
include/foundation/string/: InplaceString.hpp
include/foundation/system/: DynamicLibrary.hpp  Time.hpp  Window.hpp
include/foundation/util/: AlignedStorage.hpp  Hash.hpp
include/gfx/: DeviceChild.hpp  FrameID.hpp  GraphicsManager.hpp
include/gfx/buffer/: BufferBase.hpp  PersistentStorage.hpp  ReadbackProxy.hpp  StorageBuffer.hpp  TransientArena.hpp  UniformProxy.hpp  VertexBuffer.hpp
include/gfx/pass/: AntiAliasingPass.hpp  BasePass.hpp  CausticPass.hpp  ColorEncodingPass.hpp  DebugPass.hpp  EditorPass.hpp  FFTWaterPass.hpp  ForwardOpaquePass.hpp  ImGuiRenderPass.hpp  PassID.hpp  ShadowPass.hpp  WaterPass.hpp
include/gfx/pipeline/: PipelineDB.hpp
include/gfx/renderer/: DrawBatcher.hpp  LightsManager.hpp  RenderableObject.hpp  TransformsManager.hpp
include/gfx/scheduling/: DependencyManager.hpp  GraphDescriptorManager.hpp  GraphResource.hpp  GraphResourcesManager.hpp  RenderGraph.hpp
include/vk_wrapper/: Constant.hpp  Context.hpp  Device.hpp  Format.hpp  Helper.hpp  ImportTable.hpp  Instance.hpp  LogicalDevice.hpp  Surface.hpp  Tools.hpp
shaders/: blur_horizontal.comp.spv  blur_mix.comp.spv  blur_single_pass.comp.spv  blur_single_pass_heavy.comp.spv  blur_vertical.comp.spv  bullet.frag  bullet.vert  bullet.vert.spv  bullet_process.comp  bullet_process.comp.spv  color_encode.comp  color_encode.comp.spv  cook_torrance.frag  cook_torrance.frag.spv  cook_torrance.vert  cook_torrance.vert.spv  debug_view.comp  debug_view.comp.spv  default_lit.frag  default_lit.frag.spv  default_lit.vert  default_lit.vert.spv  default_pbr.frag  default_pbr.frag.spv  default_pbr.vert  default_pbr.vert.spv  fft_inv_perm.comp  fft_inv_perm.comp.spv  fft_iter.comp  fft_iter.comp.spv  fft_water_uniform.h  forward.h  forward_output.h  forward_shadow.frag  forward_shadow.frag.spv  forward_shadow.vert  forward_shadow.vert.spv  gen_butterfly.comp  gen_butterfly.comp.spv  gen_h0.comp  (+51 more)
src/: CMakeLists.txt
src/editor/: BaseEditor.cpp  CMakeLists.txt  CameraEditor.cpp  EngineInputManager.cpp  LightPropertiesEditor.cpp  RootEditor.cpp  SceneGraphEditor.cpp  StatsEditor.cpp  TextureInspector.cpp  TransformEditor.cpp  ViewportInputManager.cpp
src/engine/: ApplicationContext.cpp  CMakeLists.txt
src/engine/data/: Geometry.cpp  GeometryLibrary.cpp  Material.cpp  MaterialLibrary.cpp  Model.cpp  Texture2D.cpp
src/engine/io/: DRFX.cpp  IOManager.cpp
src/engine/scene/: Camera.cpp  Entity.cpp  Light.cpp  Positional.cpp  Scene.cpp  SceneNode.cpp  SceneNodeManipulator.cpp
src/engine/transform/: TransformationSystem.cpp
src/foundation/: CMakeLists.txt
src/foundation/class_features/: ContiniousDataStorage.cpp
src/foundation/input/: InputSystem.cpp  Keyboard.cpp
src/foundation/math/: Geometry.cpp
src/foundation/memory/: AllocatorScopeStack.cpp  ByteBuffer.cpp  Memory.cpp
src/foundation/system/: DynamicLibrary.cpp  Time.cpp  Window.cpp
src/foundation/util/: Hash.cpp
src/gfx/: CMakeLists.txt  DeviceChild.cpp  GraphicsManager.cpp
src/gfx/buffer/: BufferBase.cpp  PersistentStorage.cpp  ReadbackProxy.cpp  StorageBuffer.cpp  UniformProxy.cpp  VertexBuffer.cpp
src/gfx/pass/: AntiAliasingPass.cpp  BasePass.cpp  CausticPass.cpp  ColorEncodingPass.cpp  DebugPass.cpp  EditorPass.cpp  FFTWaterPass.cpp  ForwardOpaquePass.cpp  ImGuiRenderPass.cpp  ShadowPass.cpp  WaterPass.cpp
src/gfx/pipeline/: PipelineDB.cpp
src/gfx/renderer/: DrawBatcher.cpp  LightsManager.cpp  RenderableObject.cpp  TransformsManager.cpp
src/gfx/scheduling/: DependencyManager.cpp  GraphDescriptorManager.cpp  GraphResourcesManager.cpp  RenderGraph.cpp
src/gfx/texture/: ReadOnlyTexture.cpp  StorageTexture.cpp  Texture.cpp  TextureBank.cpp  TextureBase.cpp
src/gfx/view/: RenderView.cpp
src/vk_wrapper/: CMakeLists.txt  Constant.cpp  Context.cpp  Device.cpp  Format.cpp  Helper.cpp  ImportTable.cpp  Instance.cpp  LogicalDevice.cpp  Surface.cpp
src/vk_wrapper/descriptor/: DescriptorLayout.cpp  DescriptorManager.cpp  StandaloneDescriptorSet.cpp
src/vk_wrapper/memory/: MemoryController.cpp  MemoryPage.cpp
src/vk_wrapper/pipeline/: Dependency.cpp  Pipeline.cpp  RenderPass.cpp  ShaderModule.cpp
src/vk_wrapper/queue/: Queue.cpp  QueueProvider.cpp
src/vk_wrapper/resources/: Framebuffer.cpp  Resource.cpp  ResourcesController.cpp
src/vk_wrapper/swapchain/: PresentationController.cpp  Swapchain.cpp
(+23 files in other folders)
